# bone_plugin_json

./: readme.md
src/: CMakeLists.txt
src/json/: .ffi  ffi.c  ffi.h  main.c
